apply plugin: 'com.android.library'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.0"

    defaultConfig {
        minSdkVersion 18
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"

        // Required when setting minSdkVersion to 20 or lower
        multiDexEnabled true
    }

    compileOptions {
        // Flag to enable support for the new language APIs
        coreLibraryDesugaringEnabled true
        // Sets Java compatibility to Java 8
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    testOptions {
        // return default values so we won't run into
        // "Method isEmpty in android.text.TextUtils not mocked"
        // error during unit test.
        unitTests.returnDefaultValues = true
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.google.android.play:core:1.7.3'
    testImplementation 'junit:junit:4.12'
    testImplementation 'com.google.android.play:core:1.7.3'
    testImplementation 'org.mockito:mockito-all:1.10.19'
    testImplementation project(':godot-lib.3.2.2.rc1.release')
    testImplementation 'com.google.truth:truth:1.0.1'
    testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    compileOnly project(':godot-lib.3.2.2.rc1.release')
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'

}